--- a/lec03/3.1_toyNeuralNetwork.ipynb
+++ b/lec03/3.1_toyNeuralNetwork.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6268c12f-eaf7-426f-b81f-67e2406b1aec",
    "metadata": {},
    "outputs": [],
@@ -12,19 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "325cad7a-6b31-4422-9179-68fbb982a63a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "w_ij =\n",
-      " [[1.5261934  0.22733864]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 初期にランダムな重み行列を生成\n",
     "w_ij = np.random.normal(0.0, 1.0, (1, 2))\n",
@@ -42,25 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "12e4d974-3162-4770-9cdc-1802e07b8365",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1.]]\n",
-      "[[3.72007598e-44]]\n",
-      "[[1.]]\n",
-      "[[3.72007598e-44]]\n",
-      "[[1.92874985e-22]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def zi(w_ij, zj):\n",
-    "    return 1.0/(1.0 + np.exp(-w_ij@zj))\n",
+    "    return #実装\n",
     "\n",
     "# 5種類の入力データ\n",
     "zj1 = np.array([[+1.0], [+0.0]])\n",
@@ -81,31 +60,19 @@
    "id": "2376c509-c2fc-47bf-b575-95ac9f4a27ed",
    "metadata": {},
    "source": [
-    "## (b) $x$（1つ目の成分）が正のときに1，負のときに0となるよう設計するにはどのような重み$\\omega_{ij}$を設定すればよいか"
+    "## (b) $x$（1つ目の成分）が正のときに$z_i = 1$，負のときに0となるよう設計するにはどのような重み$\\omega_{ij}$を設定すればよいか"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "6fa582cc-8206-47aa-bc77-458be6317110",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1.]]\n",
-      "[[3.72007598e-44]]\n",
-      "[[1.]]\n",
-      "[[3.72007598e-44]]\n",
-      "[[1.92874985e-22]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# w_ij の値を手入力で修正する\n",
-    "w_ij[0][0] = 100.0\n",
-    "w_ij[0][1] = 0.0\n",
+    "w_ij[0][0] = # 実装\n",
+    "w_ij[0][1] = # 実装\n",
     "\n",
     "print(zi(w_ij, zj1)) # 1\n",
     "print(zi(w_ij, zj2)) # 0\n",
@@ -119,31 +86,19 @@
    "id": "dd6e64c8-3791-4aba-b335-0e776b840a99",
    "metadata": {},
    "source": [
-    "## (c) 逆に1つ目の成分が正のときに0，負のときに1をとるには？"
+    "## (c) 逆に$x$が正のときに$z_i = 0$，負のときに1をとるには？"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "c31e4b85-3acf-43c3-be9e-c11c881abace",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[3.72007598e-44]]\n",
-      "[[1.]]\n",
-      "[[3.72007598e-44]]\n",
-      "[[1.]]\n",
-      "[[1.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# w_ij の値を手入力で修正する\n",
-    "w_ij[0][0] = -100.0\n",
-    "w_ij[0][1] = 0.0\n",
+    "w_ij[0][0] = # 実装\n",
+    "w_ij[0][1] = # 実装\n",
     "\n",
     "print(zi(w_ij, zj1)) # 0\n",
     "print(zi(w_ij, zj2)) # 1\n",
@@ -162,26 +117,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "1120c2e5-2283-410b-b744-8386edbdbb98",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1.]]\n",
-      "[[3.72007598e-44]]\n",
-      "[[1.]]\n",
-      "[[3.72007598e-44]]\n",
-      "[[1.92874985e-22]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# w_ij の値を手入力で修正する\n",
-    "w_ij[0][0] = 100.0\n",
-    "w_ij[0][1] = 00.0\n",
+    "w_ij[0][0] = # 実装\n",
+    "w_ij[0][1] = # 実装\n",
     "\n",
     "print(zi(w_ij, zj1)) # 1\n",
     "print(zi(w_ij, zj2)) # 0\n",
