--- a/lec03/3.1_toyNeuralNetwork.ipynb
+++ b/lec03/3.1_toyNeuralNetwork.ipynb
@@ -7,7 +7,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.rcParams['figure.dpi'] = 150"
    ]
   },
   {
@@ -38,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def zi(w_ij, zj):\n",
+    "def CalcZi(w_ij, zj):\n",
     "    return #実装\n",
     "\n",
     "# 5種類の入力データ\n",
@@ -48,11 +50,11 @@
     "zj4 = np.array([[-1.0], [-1.0]])\n",
     "zj5 = np.array([[-0.5], [+1.0]])\n",
     "\n",
-    "print(zi(w_ij, zj1))\n",
-    "print(zi(w_ij, zj2))\n",
-    "print(zi(w_ij, zj3))\n",
-    "print(zi(w_ij, zj4))\n",
-    "print(zi(w_ij, zj5))"
+    "print(CalcZi(w_ij, zj1))\n",
+    "print(CalcZi(w_ij, zj2))\n",
+    "print(CalcZi(w_ij, zj3))\n",
+    "print(CalcZi(w_ij, zj4))\n",
+    "print(CalcZi(w_ij, zj5))"
    ]
   },
   {
@@ -123,14 +125,28 @@
    "outputs": [],
    "source": [
     "# w_ij の値を手入力で修正する\n",
-    "w_ij[0][0] = # 実装\n",
-    "w_ij[0][1] = # 実装\n",
+    "w_ij[0][0] = 100.0 # 実装\n",
+    "w_ij[0][1] = 100.0 # 実装\n",
     "\n",
-    "print(zi(w_ij, zj1)) # 1\n",
-    "print(zi(w_ij, zj2)) # 0\n",
-    "print(zi(w_ij, zj3)) # 1\n",
-    "print(zi(w_ij, zj4)) # 0\n",
-    "print(zi(w_ij, zj5)) # 1"
+    "# x, yのデータ生成\n",
+    "grid = np.linspace(-1, 1, 51)\n",
+    "lx, ly = np.meshgrid(grid, grid)\n",
+    "lx = lx.flatten()\n",
+    "ly = ly.flatten()\n",
+    "lz = np.array([])\n",
+    "\n",
+    "# zjを取り出しziを計算\n",
+    "for x, y in zip(lx, ly):\n",
+    "    zj = np.array([x, y])\n",
+    "    zi = CalcZi(w_ij, zj)\n",
+    "\n",
+    "    lz = np.append(lz, zi)\n",
+    "\n",
+    "# グラフに表示\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.contourf(lx.reshape(51, 51), ly.reshape(51, 51), lz.reshape(51, 51), vmin=0, vmax=1)\n",
+    "ax.set_aspect('equal')\n",
+    "plt.show()"
    ]
   },
   {
@@ -158,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
